--- a/src/app/shop-detail/shop-detail.component.html
+++ b/src/app/shop-detail/shop-detail.component.html
@@ -1,4 +1,8 @@
-<div>
+
+<div class="mar-left">
   详情： 
-  <p class="mar-left">id:{{shopList.id}}<br />name:{{shopList.name}}</p>
+  <p >shopid:{{shop.shopid}}</p>
+  <p>title:{{shop.title}}</p>
+  <p>subtitle:{{shop.subTitle}}</p>
 </div>
+<button (click)="goBack()">回退</button>
