--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,15 @@ h1{
     font-weight: 600;
     margin: 0;
 }
+.show-a{
+    display:inline-block;
+    border-radius:0.3rem; 
+    color: black;
+    text-decoration: none;
+    margin: 0.2rem;
+    padding: 0.5rem 0.6rem;
+    border: 0.1rem solid brown;
+}
+.active{
+    background:rgb(14, 92, 180);
+}
