--- a/src/app/shop-detail/shop-detail.component.css
+++ b/src/app/shop-detail/shop-detail.component.css
@@ -1,7 +1,7 @@
 .mar-left{
     display:inline-block;
     vertical-align:top;
-    margin: 0;
+    margin:0.5rem;
     padding: 1rem 1.5rem;
     border: 0.2rem solid yellowgreen;
 }
