根据文档中hero练习项目写的作品，结束

--- a/src/app/shop-detail/shop-detail.component.html
+++ b/src/app/shop-detail/shop-detail.component.html
@@ -1,8 +1,9 @@
-
-<div class="mar-left">
-  详情： 
-  <p >shopid:{{shop.shopid}}</p>
-  <p>title:{{shop.title}}</p>
-  <p>subtitle:{{shop.subTitle}}</p>
+<div class="mar-left" *ngIf="shop.shopid">
+  详情：
+  <p>shopid:{{ shop.shopid }}</p>
+  <p>title:{{ shop.title }}</p>
+  <p>subtitle:{{ shop.subTitle }}</p>
 </div>
 <button (click)="goBack()">回退</button>
+
+
