--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
 <div class="grid grid-pad">
-  <a *ngFor="let item of shopLists" routerLink="/detail/{{item.shopid}}" class="col-1-4">
-    <div class="module hero" >
-      <h4>{{item.title}}</h4>
+  <a
+    *ngFor="let item of shopLists"
+    routerLink="/detail/{{ item.shopid }}"
+    class="col-1-4"
+  >
+    <div class="module hero">
+      <h4>{{ item.title }}</h4>
     </div>
   </a>
 </div>
